<resources>
    <string name="app_name">MirissaBeachResort</string>
    <string name="whale_txt">Whale  Watching</string>
    <string name="txt_whale" />
    <string name="edittxt_name">Full Name</string>
    <string name="edittxt_nic">Nic</string>
    <string name="edittxt_contactno">Contact No</string>
    <string name="edittxt_arrivaldate">Arrival Date</string>
    <string name="edittxt_participants">Participants</string>
    <string name="radio_deepfishing">Deep Fishing</string>
    <string name="radio_fishing">Fishing</string>
    <string name="txt_amount1" />
    <string name="txt_amount2" />
    <string name="btn_cal" />
    <string name="txt_value" />
    <string name="btn_pay" />
    <string name="edittxt_selectboat">Select Boat</string>
    <string name="edittxt_adult">Adult(Above 18)</string>
    <string name="edittxt_adults">How Many Adult(Above 18)</string>
    <string name="editxt_children">How Many Children(Under 18)</string>
    <string name="edittxt_enterboat">Enter Boat Number</string>
</resources>